# epic

./: .gitignore  CMakeLists.txt  README.md  plugin.yaml
src/: CMakeLists.txt  EpicData.cxx  EpicData.h  EpicDetector.cxx  EpicDetector.h  EpicGeant4.cxx  EpicGeant4.h  EpicPhysics.h  EpicSamplerProcessor.cpp  EpicSamplerProcessor.h  EpicSpectra.cxx  EpicSpectra.h  Epiclinkdef.hh
